# vokiso

./: .gitignore  LICENSE  README.md  meson.build
data/: words.txt
lib/licenses/: kissnet-license.txt
source/: AudioManager.cpp  AudioManager.hpp  HostConnection.cpp  HostConnection.hpp  NetworkManager.cpp  NetworkManager.hpp  PortMapping.cpp  PortMapping.hpp  WordEncoder.cpp  WordEncoder.hpp  main.cpp  mainAudioTestA.cpp  mainAudioTestB.cpp  utils.cpp  utils.hpp
test/: testWordEncoder.cpp
